agregamos el parametros nueva_app a todos los links para que no aparezca mas el modal de que existe una nueva version de la app en la nueva version de la app. Ademas el ws para crear notificaciones si no recibe fecha y hora ingresa la fecha y hora del momento

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1398,7 +1398,7 @@ h2 {
 
 h3 {
   font-size: 17px;
-  font-weight: 700;
+  /* font-weight: 700; */
 }
 
 h4 {
@@ -3494,7 +3494,7 @@ a.badge-dark {
   border: 0;
   margin: auto;
   overflow: hidden;
-  padding-top: 56px;
+  /* padding-top: 56px; */
   position: absolute;
   left: 0;
   right: 0;
